# omop_etl

./: .coverage.html  .gitignore  .pre-commit-config.yaml  README.md  main.py  pipreqsignore.txt  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml
configs/: impress_ecrf_variables.json
src/: main.py
src/ecrf/: impress_ecrf.py
src/harmonization/: base.py  datamodels.py  harmonizer.py  main.py
src/harmonization/harmonizers/: base.py  drup.py  impress.py
src/harmonization/parsing/: coercion.py  core.py  tumor_type.py
src/harmonization/validation/: validators.py
src/harmonization/validators/: patient_validators.py  tumor_validators.py
src/omop_etl/: config.py  main.py
src/omop_etl/cli/: harmonize.py  main.py  pre_process.py  preprocess.py
src/omop_etl/concept_mapping/: api.py  models.py  semantic_loader.py  service.py  static_loader.py  structural_loader.py
src/omop_etl/db/: .dockerignore  config.py  etl.Dockerfile  init_db.py  postgres.Dockerfile  postgres.py  run_local.sh  setup.py
src/omop_etl/harmonization/: api.py  datamodels.py  models.py  service.py  utils.py
src/omop_etl/infra/: io_core.py  logging_setup.py  manifest_builder.py  options.py  path_planner.py  resolve_artifact.py  run_context.py  types.py
src/omop_etl/mapping/: concept_service.py  models.py  semantic_loader.py  static_loader.py  structural_loader.py  todo_mock.py
src/omop_etl/omop/: build.py  service.py
src/omop_etl/preprocessing/: __init__.py  api.py  service.py
src/omop_etl/scripts/: semantic_extractor.py  term_frequency_ecrf.py
src/omop_etl/semantic_mapping/: api.py  loader.py  mapper.py  models.py  pipeline.py  query_extractor.py  semantic_config.py  semantic_index.py  service.py
src/omop_etl/structural_mapping/: mapper.py
src/omop_etl/tables/: person.py
src/pre_processing/impress/: impress_ecrf.py
src/sql/: sql_logic.py
src/tables/: person.py
src/utils/: helpers.py  validators.py
tests/concept_mapping/: conftest.py  test_api.py  test_service.py
tests/concept_mapping/core/: test_io_export.py  test_loaders.py  test_models.py
tests/harmonization/: conftest.py  test_api_pipeline.py  test_service_pipeline.py
tests/harmonization/core/: test_exporter.py  test_io_export.py  test_parsers.py  test_serialize.py  test_validators.py
tests/harmonization/fixtures/: impress_fixtures.py
tests/harmonization/harmonizers/: test_impress.py
tests/harmonization/intregation/: test_full_harmonization.py
tests/harmonization/parsing/: test_core.py
tests/harmonization/unit/: test_harmonizer.py
tests/harmonization/validation/: test_validators.py
tests/infra/io/: test_format_utils.py  test_io_core.py  test_path_planner.py
tests/omop/: conftest.py  test_builders.py  test_service.py
tests/omop/builders/: test_cdm_source_builder.py  test_observation_period_builder.py  test_person_builder.py  test_visit_occurrence_builder.py
tests/preprocessing/: test_api.py  test_service.py
tests/preprocessing/core/: combine.py  test_combine.py  test_config_loader.py  test_io_export.py  test_io_load.py  test_output_manager.py  test_pipeline.py  test_readers.py  test_registry.py
tests/preprocessing/sources/: test_impress.py
tests/scripts/: test_semantic_extractor.py
tests/semantic_mapping/: conftest.py  test_query_extractor.py  test_semantic_index.py
tests/semantic_mapping/core/: test_exporter.py  test_io_export.py  test_loader.py  test_models.py  test_pipeline.py  test_query_extractor.py  test_semantic_index.py
(+98 files in other folders)
