[project]
name = "omop-etl"
version = "0.1.0"
description = "ETL for PRIME ROSE to OMOP CDM"
authors = [{ name = "Gabriel B. Stav" }]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
  "python-dotenv>=1,<2",
  "openpyxl>=3.1,<4",
  "ns>=0.1,<0.2",
  "polars>=1.22,<2",
  "json5>=0.12.0",
  "fastexcel>=0.14.0",
  "deprecated>=1.2.18",
]

[dependency-groups]
dev = [
  "pytest>=7,<9",
  "pytest-cov>=7.0.0",
  "pre-commit>=3,<4",
  "ruff>=0.9,<0.10",
  "mypy>=1.10,<2",
  "typing-extensions>=4.14.1",
  "types-deprecated>=1.2.15.20250304",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_etl"]
package-data = { "omop_etl" = ["resources/*.json"] }

[tool.ruff]
line-length = 150
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501", "F841", "COM812"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["omop_etl"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
