[project]
name = "omop-etl"
version = "0.1.0"
description = "ETL for PRIME ROSE to OMOP CDM"
authors = [{ name = "Gabriel B. Stav" }]
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
  "python-dotenv>=1,<2",
  "openpyxl>=3.1,<4",
  "ns>=0.1,<0.2",
  "polars>=1.22,<2",
  "json5>=0.12.0",
  "fastexcel>=0.14.0",
  "deprecated>=1.2.18",
  "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
  "pytest>=7,<9",
  "pytest-cov>=7.0.0",
  "pre-commit>=3,<4",
  "ruff>=0.9,<0.10",
  "typing-extensions>=4.14.1",
  "types-deprecated>=1.2.15.20250304",
  "ty>=0.0.1a28",
  "complexipy>=5.1.0",
  "scalene>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_etl"]
package-data = { "omop_etl" = ["resources/*.json"] }

[project.scripts]
etl = "omop_etl.cli.main:main"

[tool.ruff]
line-length = 140
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501", "F841", "COM812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
