[project]
name = "omop-etl"
version = "0.1.0"
description = "ETL for PRIME ROSE to OMOP CDM"
authors = [{ name = "Gabriel B. Stav" }]
requires-python = ">=3.14.2"
readme = "README.md"

dependencies = [
  "python-dotenv>=1",
  "openpyxl>=3.1.5",
  "polars>=1.36.1",
  "json5>=0.13.0",
  "fastexcel>=0.18.0",
  "deprecated>=1.2.18",
  "psycopg[binary]>=3.3.2",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pre-commit>=4.5.1",
  "ruff>=0.14.10",
  "typing-extensions>=4.15",
  "types-deprecated>=1.3.1",
  "ty>=0.0.9",
  "complexipy>=5.1.0",
  "scalene>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_etl"]
package-data = { "omop_etl" = ["resources/*.json"] }

[project.scripts]
etl = "omop_etl.cli.main:main"

[tool.ruff]
line-length = 160
target-version = "py314"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501", "F841", "COM812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
